examples/test/testpolicy2556.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2556
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key16: value4
      key30: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value24
      podSelector:
        matchLabels:
          key20: value13
          key8: value13
